# authenticator-ng

./: .gitignore  CMakeLists.txt  README.md  README.translations  authenticator-ng.desktop  manifest.json  manifest.json.in  run_on_ubuntu_touch.sh  ubuntu-authenticator.desktop  ubuntu-authenticator.json  ubuntu-authenticator.pro
app/: CMakeLists.txt  account.cpp  account.h  accountmodel.cpp  accountmodel.h  app.pro  main.cpp  qml.qrc  qrcodereader.cpp  qrcodereader.h  ubuntu-sso.desktop
app/qml/: ListItemWithActions.qml  authenticator-ng.qml  ubuntu-authenticator.qml
liboath/: CMakeLists.txt  aux.c  aux.h  errors.c  hotp.c  hotp.h  oath.h  totp.c
liboath/tests/: CMakeLists.txt  tst_errors.c  tst_hotp_algo.c  tst_hotp_validate.c  tst_totp_algo.c  tst_totp_validate.c
po/: CMakeLists.txt  af.po  authenticator-ng.pot  ca.po  ca@valencia.po  cs.po  de.po  el.po  en_GB.po  es.po  fi.po  fr.po  gl.po  hu.po  it.po  nl.po  pl.po  pt.po  sr.po  sv.po  template.pot  ug.po
screenshots/: .directory
